# atlas-embeddings

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Cargo.toml  DEPLOYMENT_CHECKLIST_v0.5.md  IMPLEMENTATION_V03_SUMMARY.md  IMPLEMENTATION_V04_SUMMARY.md  LICENSE-APACHE  LIFT_FORMS_README.md  Makefile  Makefile.atlas  PHASE0_SUMMARY.md  PHASE4_TIMELINE.md  README.md  README.md.backup  atlas_schedule.toml  co1_gates.txt  common.mk  ifmd_hybrid_bridge_minimal.py  lake-manifest.json  lakefile.lean  lift_forms.hex  package-lock.json  pyproject.toml  requirements.txt  test_aep.py  test_explosion  test_pirtm_vec.py  test_pirtm_vec_fast.py  test_simple_ffi  tests_ctx_v03  tests_ctx_v04
.github/: copilot-instructions.md
aep_ethics_commutation/: kernel.atlas  runner.py
aep_sovereignty_gate/: README.md  kernel.atlas  runner.py
artifacts/: manifest.lock.json
atlas/: README.md  README_CONTEXT_API.md  README_v04.md  __init__.py  atlas.py  complex.py  embedding.py  index.md  lift_forms.hex.example  uniqueness.py  z96_bridge.py
atlas/atlas_core/runtime/rust/: Cargo.toml  Makefile
atlas/pkg/rust/: Cargo.toml
atlas12288/: group.py  schedule.py  symmetry.py
atlas_core/: Makefile  README_CONTEXT_API.md  README_v04.md
benches/: atlas_construction.rs  cartan_computation.rs  exact_arithmetic.rs  memory_efficiency.rs
ci/: pipelines.yml
cli/: aep_launch.py  lint_aep.py
clients/: sample_domain_heads.py
core/: resgraph.py  weyl.py
data/: atlas_min.json  iota_96.json
docs/: ACE_RUNTIME.md  ACE_RUNTIME_IMPLEMENTATION_SUMMARY.md  BUILD_INSTRUCTIONS.md  DEPLOYMENT_CHECKLIST_v0.5.md  END_TO_END_VERIFICATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_V03_SUMMARY.md  IMPLEMENTATION_V04_SUMMARY.md  LIFT_FORMS_README.md  MIGRATION_v0.5.md  PAPER_ARCHITECTURE.md  PHASE0_IMPLEMENTATION.md  PIRTM_FAST_KGEN_README.md  P_299_matrix.bin.README  api_reference.md  diagnostics.md  e_layer.md  heisenberg_clifford.md  index.md  projectors.md
docs-src/: Makefile
e8/: __init__.py  roots.py
embeddings/: AEP_IMPLEMENTATION.md  CHANGELOG.md  README.md  aep.toml  kernel.atlas  mkdocs.yml  pyproject.toml  requirements.txt
embeddings/aep_ethics_commutation/: README.md  aep.toml
embeddings/aep_ethics_commutation/ops/: E_alpha.npy
embeddings/aep_sovereignty_gate/: aep.toml  sigma_plugin.py
embeddings/ci/: pipelines.yml
embeddings/core/: __init__.py  arithmetic.py  morphism.py
embeddings/data/: build_phase6.py
embeddings/docs/: terminology.json
embeddings/docs/design/: reproducible_builds.md
embeddings/docs/evidence/: artifacts_manifest.md  constructions_G2_F4_E6_E7_E8.md  index.md
embeddings/docs/governance/: kill_criteria.yaml  migration.md
embeddings/docs/proofs/: index.md  resgraph.md
embeddings/docs/proofs/lean/: ScheduleOrder.lean
embeddings/docs/proofs/obl/: R96Enumeration.md
embeddings/docs/specs/: README.md
embeddings/docs/specs/v2/: invariants.yaml
embeddings/docs/specs/v2/checklists/: dpi.yaml
embeddings/e8/: order.py  weyl.py
embeddings/examples/: demo_ace_runtime.py  demo_pirtm_fast.py  generate_golden_seed_fractal_3d.rs
embeddings/examples/seeds/boundary_window/: witness_pass.json
embeddings/examples/seeds/mirror_safe/: aep.toml
embeddings/examples/seeds/unity_neutral/: witness_pass.json
embeddings/formal/coq/Formal/: Adjacency.v  Embedding.v  Ops.v  Types.v
embeddings/formal/lean/: Formal.lean  Lakefile.lean
embeddings/formal/lean/Formal/: Embedding.lean  Ops.lean
embeddings/lean4/: AtlasEmbeddings.lean
embeddings/lean4/Math/Clifford/: KernelProof.lean  Normalizer.lean
embeddings/lean4/Math/Heisenberg/: Core.lean  SanityTests.lean
embeddings/lie/: classify.py  simple_system.py  weyl_order.py
embeddings/models/coherence-calculus/: README.md
embeddings/models/digital-resonance/: README.md
embeddings/ops/: closure.py  filters.py  product.py  quotient.py
embeddings/petc/: ledger.json  phi.py
embeddings/pipelines/: exceptional.py
embeddings/runner/: main.py  metrics.py  monitors.py  witness_checks.py
embeddings/schema/: aep.schema.json
embeddings/src/: __init__.py
embeddings/supply/attest/: README.md
embeddings/supply/keys/: README.md
embeddings/tests/: test_anchors.py  test_audit_runner.py  test_c768.py  test_explosion.c  test_lint.py  test_petc_ledger.py  test_phase7_validate_cli.py  test_projectors.c  test_quantizer.py  test_spasc.py
embeddings/tests/liveness/: README.md
embeddings/tests/property/: test_dpi.py
embeddings/tools/: README.md  __init__.py  claims_guard.py  copilot_repo_setup.md  fracfmt.py  manifest.py  terminology_fix.py  terminology_lint.py  verify_bridge.sh
embeddings/tools/lint/: rules.py
embeddings/validate/: e_specs.py  inner_products.py
embeddings/views/: api.py  exceptional.py  phi.py
examples/: generate_depth2_fractal.rs  generate_golden_seed_fractal_3d.rs  lattice_guard_example.py  phase0_demo.py
ffi/: FILES.md  create_bundle.sh
hologram_v2/: .gitignore  CHANGELOG.md  Makefile  README.md
lean/: Makefile  UOR.lean
lean4/: AtlasEmbeddings.lean  GAP_ANALYSIS.md  LAST_MILE.md  PLAN.md  README.md
lie/: cartan.py
multiplicity_core/: ACE_XP_README.md  LATTICE_GUARD_README.md  PHASE0_README.md  README.md  __init__.py  ace.py  ace_backend.py  ace_projector_xp.py  ace_runtime_xp.py  audit_bundle.toml  audit_runner.py  boundary_lattice.py  certify_subgroup.py  config.py  lanes.py  lattice_guard.py  ledger.py  petc.py  phase0_index.py  proofs.py  quantizer.py  runtime.py  scheduler.py  sigmatics_bridge.py  signature.py  toggles.py  watchdog.py
numpy/: __init__.py
pkg/: Makefile
r96/: __init__.py  build.py  io.py
runner/: README.md
scripts/: gen-trace.py  measure-tcb.py  spec_check.py  validate_embedding.sh
sigmatics/: README.md  package-lock.json
src/: lib.rs  spectral.rs
tests/: Makefile  action_functional_uniqueness.rs  atlas_construction.rs  atlas_initiality.rs  categorical_completeness.rs  categorical_operations.rs  conftest.py  e6_construction.rs  e7_construction.rs  e8_embedding.rs  embedding_weyl_orbit.rs  (+51 more)
(+317 files in other folders)
