[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-hologram"
version = "0.1.0"
description = "Atlas Hologram with Multiplicity Core Architecture"
authors = [{name = "UOR Foundation"}]
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = false
strict = true
