[package]
name = "uor-ffi"
version = "1.0.0"
edition = "2021"
authors = ["UOR Contributors"]
description = "Rust bindings for UOR Prime Structure FFI"
license = "MIT"
repository = "https://github.com/atlas-12288/uor"

[lib]
name = "uor"
path = "src/lib.rs"

[dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
cc = "1.0"

